--- a/index.html
+++ b/index.html
@@ -7,10 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
-    <title>Listmon</title>
+    <title>List</title>
 </head>
 
 <body>
+    <div class="container-fluid">
+        <form onsubmit="app.controllers.listController.addList(event)">
+            <div class="form-group">
+                <label for="name">Team List</label>
+                <input type="text" class="form-control" name="name" placeholder="list name">
+            </div>
+            <button class="btn btn-primary" type="submit">submit</button>
+        </form>
+        <div id="list" class="row">
+
+        </div>
+
+
+    </div>
+
+
+
+
 
 
     <script src="app/main.js" type="module"></script>
