--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
 
         <form onsubmit="app.controllers.listController.addList(event)">
-            <div class="row justify-content border border-info p-3">
+            <div id="rowOne" class="row justify-content border border-info p-3">
                 <div class="ml-2 col-6 mt-3 border border-danger border-top-0 border-right-0">
                     <div class="form-group">
                         <label class="font-weight-bold" for="name">Name</label>
@@ -28,7 +28,7 @@
                     <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
                 </div>
             </div>
-            <div class="row justify-content border border-info p-3">
+            <div id="rowTwo" class="row justify-content border border-info p-3">
                 <div class="offset-3 col-6 mt-3 border border-danger border-top-0 border-right-0">
                     <div class="form-group">
                         <label class="font-weight-bold" for="name">Kitchen</label>
@@ -38,7 +38,7 @@
                     <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
                 </div>
             </div>
-            <div class="row justify-content border border-info p-3 mb-2">
+            <div id="rowthree" class="row justify-content border border-info p-3 mb-2">
                 <div class="offset-5 col-6 mt-3 mb-5 border border-danger">
                     <div class="form-group">
                         <label class="font-weight-bold mt-3" for="name">Outdoors</label>
