--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div id="rowOne" class="row justify-content border border-info p-3">
                 <div class="ml-2 col-6 mt-3 border border-danger border-top-0 border-right-0">
                     <div class="form-group">
-                        <label class="font-weight-bold" for="name">Name</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" name="name"
-                            placeholder="name list">
+                        <label class="font-weight-bold" for="name">Groceries</label>
+                        <input type="text" class="form-control font-italic font-weight-bold" groceries="groceries"
+                            placeholder="groceries list">
                     </div>
                     <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
                 </div>
@@ -31,9 +31,9 @@
             <div id="rowTwo" class="row justify-content border border-info p-3">
                 <div class="offset-3 col-6 mt-3 border border-danger border-top-0 border-right-0">
                     <div class="form-group">
-                        <label class="font-weight-bold" for="name">Kitchen</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" kitchen="kitchen"
-                            placeholder="kitchen list">
+                        <label class="font-weight-bold" for="name">Home</label>
+                        <input type="text" class="form-control font-italic font-weight-bold" home="home"
+                            placeholder="home list">
                     </div>
                     <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
                 </div>
