update name change

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                 <div class="offset-5 col-6 mt-3 mb-5 border border-danger">
                     <div class="form-group">
                         <label class="font-weight-bold mt-3" for="name">Outdoors</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" outdoors="outdoors"
-                            placeholder="outdoor list">
+                        <input type="text" class="form-control font-italic font-weight-bold" yard="yard"
+                            placeholder="yard list">
                     </div>
                     <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
                 </div>
