made change still will not work

--- a/index.html
+++ b/index.html
@@ -21,31 +21,11 @@
             <div id="rowOne" class="row justify-content border border-info p-3">
                 <div class="ml-2 col-6 mt-3 border border-danger border-top-0 border-right-0">
                     <div class="form-group">
-                        <label class="font-weight-bold" for="groceries">Groceries</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" name="groceries"
-                            placeholder="groceries list">
+                        <label class="font-weight-bold" for="name">name</label>
+                        <input type="text" class="form-control font-italic font-weight-bold" name="name"
+                            placeholder="Name list">
                     </div>
-                    <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
-                </div>
-            </div>
-            <div id="rowTwo" class="row justify-content border border-info p-3">
-                <div class="offset-3 col-6 mt-3 border border-danger border-top-0 border-right-0">
-                    <div class="form-group">
-                        <label class="font-weight-bold" for="home">Home</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" name="home"
-                            placeholder="home list">
-                    </div>
-                    <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
-                </div>
-            </div>
-            <div id="rowthree" class="row justify-content border border-info p-3 mb-2">
-                <div class="offset-5 col-6 mt-3 mb-5 border border-danger">
-                    <div class="form-group">
-                        <label class="font-weight-bold mt-3" for="yard">yard</label>
-                        <input type="text" class="form-control font-italic font-weight-bold" name="yard"
-                            placeholder="yard list">
-                    </div>
-                    <button class="btn btn-outline-dark btn-sm mb-2" type="button">submit</button>
+                    <button class="btn btn-outline-dark btn-sm mb-2" type="submit">submit</button>
                 </div>
             </div>
         </form>
